// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MusicSearchScreen when data is successfully loaded matches snapshot 1`] = `
<body>
  <div>
    <main>
      <form
        class="mb-10"
        role="search"
      >
        <label
          class="sr-only"
          for="id123"
        >
          Search music
        </label>
        <input
          class="w-full appearance-none rounded-md border px-3 py-2 font-medium leading-tight text-gray-700 shadow focus:outline-none focus:ring mb-3"
          id="id123"
          name="search"
          placeholder="Search"
          value="eminem"
        />
        <button
          class="rounded bg-blue-500 px-4 py-2 font-semibold text-white hover:bg-blue-600 focus:outline-none focus:ring"
        >
          Search
        </button>
      </form>
      <div
        class="flex flex-col items-center justify-center gap-x-2 gap-y-4 md:flex-row mb-10"
      >
        <select
          class="border-blue-gray-100 cursor-pointer rounded-full border bg-white px-2 py-2 text-sm font-semibold transition focus:outline-none focus:ring [&:not(:focus)]:hover:bg-gray-100"
        >
          <option
            value="10"
          >
            10 / page
          </option>
          <option
            value="20"
          >
            20 / page
          </option>
          <option
            value="30"
          >
            30 / page
          </option>
        </select>
      </div>
      <div
        class="grid grid-cols-[repeat(auto-fit,minmax(16rem,1fr))] justify-items-center gap-6"
      >
        <div
          class="flex max-w-[22rem]"
        >
          <a
            data-testid="card"
            href="/"
          >
            <div
              class="relative flex flex-col items-center gap-8 rounded-xl bg-white bg-clip-border px-6 py-6 text-gray-700 shadow transition-shadow hover:shadow-lg"
            >
              <div
                class="relative overflow-hidden rounded-xl bg-white bg-clip-border shadow-lg"
              >
                <img
                  class="transition-[filter]"
                  height="500"
                  src="https://e-cdns-images.dzcdn.net/images/cover/11e1fc126a751dc230a1d761ddd1e7b0/500x500-000000-80-0-0.jpg"
                  width="500"
                />
              </div>
              <div
                class="text-center"
              >
                <h4
                  class="mb-2 text-lg font-semibold leading-snug tracking-normal text-gray-900 antialiased"
                >
                  The Marshall Mathers LP2 (Expanded Edition)
                </h4>
                <p
                  class="leading-relax font-medium antialiased text-gray-500"
                >
                  Eminem
                </p>
              </div>
            </div>
          </a>
        </div>
        <div
          class="flex max-w-[22rem]"
        >
          <a
            data-testid="card"
            href="/"
          >
            <div
              class="relative flex flex-col items-center gap-8 rounded-xl bg-white bg-clip-border px-6 py-6 text-gray-700 shadow transition-shadow hover:shadow-lg"
            >
              <div
                class="relative overflow-hidden rounded-xl bg-white bg-clip-border shadow-lg"
              >
                <img
                  class="transition-[filter]"
                  height="500"
                  src="https://e-cdns-images.dzcdn.net/images/cover/ec3c8ed67427064c70f67e5815b74cef/500x500-000000-80-0-0.jpg"
                  width="500"
                />
              </div>
              <div
                class="text-center"
              >
                <h4
                  class="mb-2 text-lg font-semibold leading-snug tracking-normal text-gray-900 antialiased"
                >
                  The Eminem Show
                </h4>
                <p
                  class="leading-relax font-medium antialiased text-gray-500"
                >
                  Eminem
                </p>
              </div>
            </div>
          </a>
        </div>
        <div
          class="flex max-w-[22rem]"
        >
          <a
            data-testid="card"
            href="/"
          >
            <div
              class="relative flex flex-col items-center gap-8 rounded-xl bg-white bg-clip-border px-6 py-6 text-gray-700 shadow transition-shadow hover:shadow-lg"
            >
              <div
                class="relative overflow-hidden rounded-xl bg-white bg-clip-border shadow-lg"
              >
                <img
                  class="transition-[filter]"
                  height="500"
                  src="https://e-cdns-images.dzcdn.net/images/cover/941c2d3c366affdc662956559e078a4e/500x500-000000-80-0-0.jpg"
                  width="500"
                />
              </div>
              <div
                class="text-center"
              >
                <h4
                  class="mb-2 text-lg font-semibold leading-snug tracking-normal text-gray-900 antialiased"
                >
                  The Marshall Mathers LP
                </h4>
                <p
                  class="leading-relax font-medium antialiased text-gray-500"
                >
                  Eminem
                </p>
              </div>
            </div>
          </a>
        </div>
        <div
          class="flex max-w-[22rem]"
        >
          <a
            data-testid="card"
            href="/"
          >
            <div
              class="relative flex flex-col items-center gap-8 rounded-xl bg-white bg-clip-border px-6 py-6 text-gray-700 shadow transition-shadow hover:shadow-lg"
            >
              <div
                class="relative overflow-hidden rounded-xl bg-white bg-clip-border shadow-lg"
              >
                <img
                  class="transition-[filter]"
                  height="500"
                  src="https://e-cdns-images.dzcdn.net/images/cover/d6e14fe8e855c20db60b31a7b42eb007/500x500-000000-80-0-0.jpg"
                  width="500"
                />
              </div>
              <div
                class="text-center"
              >
                <h4
                  class="mb-2 text-lg font-semibold leading-snug tracking-normal text-gray-900 antialiased"
                >
                  The Eminem Show (Expanded Edition)
                </h4>
                <p
                  class="leading-relax font-medium antialiased text-gray-500"
                >
                  Eminem
                </p>
              </div>
            </div>
          </a>
        </div>
        <div
          class="flex max-w-[22rem]"
        >
          <a
            data-testid="card"
            href="/"
          >
            <div
              class="relative flex flex-col items-center gap-8 rounded-xl bg-white bg-clip-border px-6 py-6 text-gray-700 shadow transition-shadow hover:shadow-lg"
            >
              <div
                class="relative overflow-hidden rounded-xl bg-white bg-clip-border shadow-lg"
              >
                <img
                  class="transition-[filter]"
                  height="500"
                  src="https://e-cdns-images.dzcdn.net/images/cover/55d424a53904d145b17869ba133843d7/500x500-000000-80-0-0.jpg"
                  width="500"
                />
              </div>
              <div
                class="text-center"
              >
                <h4
                  class="mb-2 text-lg font-semibold leading-snug tracking-normal text-gray-900 antialiased"
                >
                  Music To Be Murdered By - Side B (Deluxe Edition)
                </h4>
                <p
                  class="leading-relax font-medium antialiased text-gray-500"
                >
                  Eminem
                </p>
              </div>
            </div>
          </a>
        </div>
        <div
          class="flex max-w-[22rem]"
        >
          <a
            data-testid="card"
            href="/"
          >
            <div
              class="relative flex flex-col items-center gap-8 rounded-xl bg-white bg-clip-border px-6 py-6 text-gray-700 shadow transition-shadow hover:shadow-lg"
            >
              <div
                class="relative overflow-hidden rounded-xl bg-white bg-clip-border shadow-lg"
              >
                <img
                  class="transition-[filter]"
                  height="500"
                  src="https://e-cdns-images.dzcdn.net/images/cover/7c2641a8f3d5d453581549d55ef501a7/500x500-000000-80-0-0.jpg"
                  width="500"
                />
              </div>
              <div
                class="text-center"
              >
                <h4
                  class="mb-2 text-lg font-semibold leading-snug tracking-normal text-gray-900 antialiased"
                >
                  Recovery (Deluxe Edition)
                </h4>
                <p
                  class="leading-relax font-medium antialiased text-gray-500"
                >
                  Eminem
                </p>
              </div>
            </div>
          </a>
        </div>
        <div
          class="flex max-w-[22rem]"
        >
          <a
            data-testid="card"
            href="/"
          >
            <div
              class="relative flex flex-col items-center gap-8 rounded-xl bg-white bg-clip-border px-6 py-6 text-gray-700 shadow transition-shadow hover:shadow-lg"
            >
              <div
                class="relative overflow-hidden rounded-xl bg-white bg-clip-border shadow-lg"
              >
                <img
                  class="transition-[filter]"
                  height="500"
                  src="https://e-cdns-images.dzcdn.net/images/cover/bf74fc764097630ba58782ae79cfbee6/500x500-000000-80-0-0.jpg"
                  width="500"
                />
              </div>
              <div
                class="text-center"
              >
                <h4
                  class="mb-2 text-lg font-semibold leading-snug tracking-normal text-gray-900 antialiased"
                >
                  Kamikaze
                </h4>
                <p
                  class="leading-relax font-medium antialiased text-gray-500"
                >
                  Eminem
                </p>
              </div>
            </div>
          </a>
        </div>
        <div
          class="flex max-w-[22rem]"
        >
          <a
            data-testid="card"
            href="/"
          >
            <div
              class="relative flex flex-col items-center gap-8 rounded-xl bg-white bg-clip-border px-6 py-6 text-gray-700 shadow transition-shadow hover:shadow-lg"
            >
              <div
                class="relative overflow-hidden rounded-xl bg-white bg-clip-border shadow-lg"
              >
                <img
                  class="transition-[filter]"
                  height="500"
                  src="https://e-cdns-images.dzcdn.net/images/cover/83c5dc5ab4d1781ed3bb01c43956d71e/500x500-000000-80-0-0.jpg"
                  width="500"
                />
              </div>
              <div
                class="text-center"
              >
                <h4
                  class="mb-2 text-lg font-semibold leading-snug tracking-normal text-gray-900 antialiased"
                >
                  The Slim Shady LP
                </h4>
                <p
                  class="leading-relax font-medium antialiased text-gray-500"
                >
                  Eminem
                </p>
              </div>
            </div>
          </a>
        </div>
        <div
          class="flex max-w-[22rem]"
        >
          <a
            data-testid="card"
            href="/"
          >
            <div
              class="relative flex flex-col items-center gap-8 rounded-xl bg-white bg-clip-border px-6 py-6 text-gray-700 shadow transition-shadow hover:shadow-lg"
            >
              <div
                class="relative overflow-hidden rounded-xl bg-white bg-clip-border shadow-lg"
              >
                <img
                  class="transition-[filter]"
                  height="500"
                  src="https://e-cdns-images.dzcdn.net/images/cover/1dbb5a67a722a9defa1d9d23b474cee7/500x500-000000-80-0-0.jpg"
                  width="500"
                />
              </div>
              <div
                class="text-center"
              >
                <h4
                  class="mb-2 text-lg font-semibold leading-snug tracking-normal text-gray-900 antialiased"
                >
                  Feminem
                </h4>
                <p
                  class="leading-relax font-medium antialiased text-gray-500"
                >
                  Justina Valentine
                </p>
              </div>
            </div>
          </a>
        </div>
        <div
          class="flex max-w-[22rem]"
        >
          <a
            data-testid="card"
            href="/"
          >
            <div
              class="relative flex flex-col items-center gap-8 rounded-xl bg-white bg-clip-border px-6 py-6 text-gray-700 shadow transition-shadow hover:shadow-lg"
            >
              <div
                class="relative overflow-hidden rounded-xl bg-white bg-clip-border shadow-lg"
              >
                <img
                  class="transition-[filter]"
                  height="500"
                  src="https://e-cdns-images.dzcdn.net/images/cover/5026c46b38ed035092df6cfc5a4a288f/500x500-000000-80-0-0.jpg"
                  width="500"
                />
              </div>
              <div
                class="text-center"
              >
                <h4
                  class="mb-2 text-lg font-semibold leading-snug tracking-normal text-gray-900 antialiased"
                >
                  Encore
                </h4>
                <p
                  class="leading-relax font-medium antialiased text-gray-500"
                >
                  Eminem
                </p>
              </div>
            </div>
          </a>
        </div>
      </div>
      <div
        class="flex flex-col items-center justify-center gap-x-2 gap-y-4 md:flex-row mt-10"
      >
        <select
          class="border-blue-gray-100 cursor-pointer rounded-full border bg-white px-2 py-2 text-sm font-semibold transition focus:outline-none focus:ring [&:not(:focus)]:hover:bg-gray-100"
        >
          <option
            value="10"
          >
            10 / page
          </option>
          <option
            value="20"
          >
            20 / page
          </option>
          <option
            value="30"
          >
            30 / page
          </option>
        </select>
      </div>
    </main>
  </div>
</body>
`;

exports[`MusicSearchScreen when there is an error loading data matches snapshot 1`] = `
<body>
  <div>
    <main>
      <form
        class="mb-10"
        role="search"
      >
        <label
          class="sr-only"
          for="id123"
        >
          Search music
        </label>
        <input
          class="w-full appearance-none rounded-md border px-3 py-2 font-medium leading-tight text-gray-700 shadow focus:outline-none focus:ring mb-3"
          id="id123"
          name="search"
          placeholder="Search"
          value="eminem"
        />
        <button
          class="rounded bg-blue-500 px-4 py-2 font-semibold text-white hover:bg-blue-600 focus:outline-none focus:ring"
        >
          Search
        </button>
      </form>
      <div
        class="flex flex-col items-center justify-center gap-4"
      >
        <div
          class="h-14 fill-slate-500"
        />
        <p
          class="text-xl font-semibold text-slate-600"
        >
          No result found
        </p>
      </div>
    </main>
  </div>
</body>
`;
